<resources>
    <string name="app_name">Pratik Hasar</string>
    <string name="login">GİRİŞ YAP</string>
    <string name="password">Şifre</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="e_mail">Email</string>
    <string name="register">KAYIT OL</string>
    <string name="Logo">Logo</string>
    <string name="Email">Email</string>
    <string name="prompt">Şehir seçin</string>
    <string name="menu">Menü</string>
    <string name="search">Ara</string>
    <string name="bugun_acilankartlar">Bugün Açılan K</string>
    <string name="acilan_adet">Adet Açılan kart</string>
    <string name="acik_kartlar">Açık Kartlar</string>
    <string name="adet">Adet</string>
    <string name="teslimi_geciken">Teslimi Geciken Araçlar</string>
    <string name="onay_bekleyenler">Onay Bekleyenler</string>
    <string name="hello_blank_fragment">Onay Bekleyenler</string>
    <string name="parca_tedarik_bekleyen">Parça Tedarik Bekleyenler</string>
    <string name="parca_iscilik_bekleyen">Parça Dış İşçilik Bekleyen</string>
    <string name="teslime_hazir_araclar">Teslime Hazır Araçlar</string>
    <string name="date">Tarih</string>
    <string name="kapali_kartlar">Kapalı Kartlar</string>
    <string name="mekanik_kart_ac">mekanik kabul kartı aç</string>
    <string name="hasar_kart_ac">hasar kabul kartı aç</string>
    <string name="kullanici_bulunamadi">Kullanıcı Bulunamadı</string>
    <string name="hasar_onarim_merkezi">Hasar Onarım Merkezi</string>
    <string name="kayit_formu">KAYIT FORMU</string>
    <string name="firma_tel_no">Firma Telefon Numarası</string>
    <string name="yetkili_isim_soyisim">Yetkili İsim ve Soyisim</string>
    <string name="firma_unvan">Firma Unvanı</string>
    <string name="yetkili_tel_no">Yetkili Telefon Numarası</string>
    <string name="hesap_var">Hesabınız mı var?</string>
    <string name="seciniz">Seçiniz...</string>
    <string name="mekanik_servis">Mekanik Servis</string>
    <string name="kaporta_boya_servis">Kaporta-Boya Servisi</string>
    <string name="hasar_onarim_servis">Hasar Onarim Merkezi</string>
    <string name="kayit_basarisiz">Kayıt Başarısız</string>
    <string name="kayit_basarili">Kayıt Başarılıdır</string>
    <string name="logo_secin">Lütfen logo seciniz!!!</string>
    <string name="uyari">UYARI</string>
    <string name="mail_format">Lütfen email formatında kullanıcı adı giriniz!!!</string>
    <string name="kullanici_var">Böyle bir kullanıcı var</string>
    <string name="kullanici_oturum_acmis">Böyle bir kullanıcı var</string>
    <string name="yazdir">Yazdır</string>
    <string name="bitistarihi">Bitiş Tarihi </string>
    <string name="kasatipi">Kasa Tipi</string>
    <string name="istek_sikayet">İSTEK/ŞİKAYET</string>
    <string name="sahibi">SAHİBİ</string>
    <string name="sigorta">SİGORTA</string>
    <string name="resim">RESİM</string>
    <string name="onarim">ONARIM</string>
    <string name="durdur">Durdur</string>
    <string name="unvan">Unvan</string>
    <string name="vergino">Vergi No</string>
    <string name="adres">Adres</string>
    <string name="il">İl</string>
    <string name="ilce">İlçe</string>
    <string name="tel">GSM</string>
    <string name="stc">Sürücü Tel</string>
    <string name="sad_soyad">S.Ad/Soyad</string>
    <string name="bankaismi">Banka İsmi</string>
    <string name="iban">IBAN</string>
    <string name="guncelle">GÜNCELLE</string>
    <string name="evet">EVET</string>
    <string name="hayir">HAYIR</string>
    <string name="kime">Kime?</string>
    <string name="tumu">Tümü</string>
    <string name="secilen">Seçilen</string>
    <string name="marka">Marka</string>
    <string-array name="model">
        <item>124</item>
        <item>595</item>
        <item>695</item>
    </string-array>
    <string name="mesaj">Mesajınız...</string>
    <string name="gonder">Gönder</string>
    <string name="smsgonder">Sms Gönderme Formu</string>
    <string name="mailgonder">Mail Gönderme Formu</string>
    <string name="verginogir">Vergi numarası 10dan küçük olamaz</string>
    <string name="kartac">Kart Aç</string>
    <string name="ilerle">İlerle</string>
    <string name="mailadresi">Mail Adresiniz</string>
    <string name="mailsifresi">Mail Şifresi</string>
    <string name="smtpport">Smtp Port</string>
    <string-array name="ssl">
        <item>@string/evet</item>
        <item>@string/hayir</item>
    </string-array>
    <string name="kaydet">KAYDET</string>
    <string name="logo_yazi">Yeni Nesil Dijital</string>
    <string name="logo_yazi2">Asistanınız</string>
    <string name="kabulasmasi">KABUL AŞAMASI</string>
    <string name="tespitresimleri">tespit resimleri</string>
    <string name="modelversiyon">Model Vers.</string>
    <string name="modelyili">Model Yılı</string>
    <string-array name="renk">
        <item>BEJ</item>
        <item>BEYAZ</item>
        <item>BORDO</item>
        <item>FÜME</item>
        <item>GRİ</item>
        <item>GÜMÜŞ GRİ</item>
        <item>KAHVERENGİ</item>
        <item>KIRMIZI</item>
        <item>LACİVERT</item>
        <item>MAVİ</item>
        <item>MOR</item>
        <item>PEMBE</item>
        <item>SARI</item>
        <item>SİYAH</item>
        <item>ŞAMPANYA</item>
        <item>TURKUAZ</item>
        <item>TURUNCU</item>
        <item>YEŞİL</item>
        <item>METALİK GRİ</item>
        <item>TİTANYUM GRİ</item>
        <item>METALİK MAVİ</item>
        <item>METALİK YEŞİL</item>
        <item>DİĞER </item>
    </string-array>
    <string name="saseno">Şase No</string>
    <string name="motorno">Motor No</string>
    <string-array name="konum">
        <item>Serviste</item>
        <item>Sahibinde</item>
        <item>Otoparkta</item>
        <item>Olay Yerinde</item>
    </string-array>
    <string-array name="durum">
        <item>Yürüyor</item>
        <item>Yürümüyor</item>
    </string-array>
    <string name="mua">Mua Bitiş Tarihi</string>
    <string name="bakiye">Bakiye</string>
    <string name="cariadi">Cari Adı</string>
    <string name="borc">Borç</string>
    <string name="alacak">Alacak</string>
    <string name="aracbilgi">Araç Bilgisi</string>
    <string name="aracturu">Araç Türü</string>
    <string name="plakano">Plaka No</string>
    <string name="tutanaktipi">Tutanak Tipi</string>
    <string name="sigortalitipi">Sigortalı Tipi</string>
    <string name="policeturu">Poliçe Türü</string>
    <string name="sorumluadi">Sorumlu Adı</string>
    <string name="sorumlutel">Sorumlu Tel</string>
    <string name="dosyano">Dosya No</string>
    <string name="ihbartarihi">İhbar tarihi</string>
    <string name="kontroloradi">Kontrolör Adı</string>
    <string name="kontrolortel">Kontrolör Tel</string>
    <string name="sigortasirketi">Sigorta Şirketi</string>
    <string name="eksper">Eksper Unvanı</string>
    <string name="bitmishali">BİTMİŞ HALİ</string>
    <string name="yapilacaklari">Yapılacakları</string>
    <string name="yaz">Yaz</string>
    <string name="soyle">Söyle</string>
    <string name="ruhsat">Ruhsat</string>
    <string name="sagon">Sağ Ön Taraf</string>
    <string name="solon">Sol Ön Taraf</string>
    <string name="sagarka">Sağ Arka Taraf</string>
    <string name="solarka">Sol Arka Taraf</string>
    <string name="olayyeri">OLAY YERİ</string>
    <string name="stokiscilikno">Stok/İsc No</string>
    <string name="stokiscilikadi">Stok/İsc. Adı</string>
    <string name="miktar">Miktar</string>
    <string name="fiyat">Fiyat </string>
    <string name="ekle">ekle</string>
    <string name="servistespit">SERVİS TESPİT</string>
    <string-array name="evrak">
        <item>Evrak ismi Seciniz</item>
        <item>Alkol Raporu</item>
        <item>Anahtar Teslim Yazısı</item>
        <item>Banka Bilgileri</item>
        <item>Beyan</item>
        <item>Beyan Yazısı</item>
        <item>Ehliyet</item>
        <item>Ehliyet Raporu</item>
        <item> Görgü Tespit Tutanağı</item>
        <item> Hastane Raporları</item>
        <item> İbraname Yazısı</item>
        <item> İfade Tutanağı</item>
        <item> İkama Araç Formu</item>
        <item> Kasko Poliçesi</item>
        <item> Kaza Tespit Tutanağı </item>
        <item> Kurum Kimlik   </item>
        <item> Mağdur Araç Ruhsatı </item>
        <item> Mağdur Iban-Banka Adı  </item>
        <item> Mağdur Nüfus Cüz. Kimlik No </item>
        <item> Mağdur Vergi Numarası</item>
        <item> Mal Alış Faturası  </item>
        <item> Meslek Bilgisi </item>
        <item> Mutakabat Yazısı </item>
        <item> Prim Makbuzu </item>
        <item> Ruhsat </item>
        <item> Servis Faturası </item>
        <item> Sigorta Poliçesi </item>
        <item> Taahhüt  </item>
        <item> Taahhüt Belgesi  </item>
        <item> Teslim İbra  </item>
        <item> Trafik/Jandarma Zabtı</item>
        <item> Trafik Poliçesi</item>
        <item> Tedarik Parça Tespit Tutanağı</item>
        <item> Vekaletname</item>
        <item> Vekil Nüfus Cüzdanı</item>
        <item> Yansıtma Faturası  </item>
        <item> Zabıt </item>
    </string-array>
    <string name="yapimasamasi">yapım aşaması</string>
    <string name="stokno">Stok No</string>
    <string name="toplam">Toplam</string>
    <string name="aciklama">Açıklama</string>
    <string name="yapilacaklar">Yapılacaklar...</string>
    <string name="sil">Sil</string>
    <string name="carislemleri">Cari İşlemleri</string>
    <string name="efaturaislemleri">e-Fatura İşlemleri</string>
    <string name="ayarlar">Ayarlar</string>
    <string name="kampanyaduyuru">Kampanya ve Duyurular</string>
    <string name="zamanliislemler">Zamanlı İşlemeler</string>
    <string name="satinal">Satın Al</string>
    <string name="tumhesaplar">Tüm Hesaplar</string>
    <string name="cariekleduzenle">Cari Ekle/Düzenle</string>
    <string name="tahsilatgirisi">Tahsilat Girişi</string>
    <string name="odemegirisi">Ödeme Girişi</string>
    <string name="tahsilat">Tahsilat </string>
    <string name="odeme">Ödeme </string>
    <string name="gelenfaturalar">Gelen Faturalar</string>
    <string name="gidenfaturalar">Giden Faturalar</string>
    <string name="faturasistemayarlari">e- Fatura Sistem Ayarları</string>
    <string name="faturakontoryukleme">e- Fatura Kontör Yükleme</string>
    <string name="menuayari">Menu Ayarı</string>
    <string name="kullanicitanimlamalari">Kullanıcı Tanımlamaları</string>
    <string name="smsayarlari">SMS Ayarları</string>
    <string name="mailayarlari">Mail Ayarları</string>
    <string name="sanalposayarlari">Sanal Pos Ayarları</string>
    <string name="bakimzamanigelenler">Bakım Zamanı Gelenler</string>
    <string name="muayaklasan">Muayene Tarihi</string>
    <string name="egzozyaklasan">Egzoz Emisyon Bitiş Tarihi</string>
    <string name="trafiksigortasiyaklasan">Trafik Sigortası Bitiş Tarihi</string>
    <string name="kaskosigortasiyaklasan">Kasko Sigortası Bitiş Tarihi</string>
    <string name="menusecin">Menu seçin</string>
    <string name="vergidairesi">Vergi Dairesi</string>
    <string name="odemeler">Ödemeler</string>
    <string name="tarih">Tarih</string>
    <string name="tutar">Tutar</string>
    <string name="sepet">Sepet</string>
    <string name="aylik">Aylık 120 TL</string>
    <string name="ucaylik">3 Ay 330 TL</string>
    <string name="altiay">6 Ay 600 TL</string>
    <string name="yillik">12 Ay 1080 TL</string>
    <string name="aylikh">Aylık 200 TL</string>
    <string name="ucaylikh">3 Ay 570 TL</string>
    <string name="altiayh">6 Ay 1500 TL</string>
    <string name="yillikh">12 Ay 1920 TL</string>
    <string name="aylikhm">Aylık 330 TL</string>
    <string name="ucaylikhm">3 Ay 930TL</string>
    <string name="altiayhm">6 Ay 1740 TL</string>
    <string name="yillikhm">12 Ay 3300 TL</string>
    <string name="yüz">100 Kontör 85 TL</string>
    <string name="ikiyuzelli">250 Kontör 175 TL</string>
    <string name="besyuz">500 Kontör 300 TL</string>
    <string name="bin">1000 Kontör 550 TL</string>
</resources>