<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SatinAlmaEkraniActivity"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/toolbar_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:src="@drawable/ic_chevron_left_white_24px"
            app:tint="@color/gray" />

        <ImageView
            android:id="@+id/forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:src="@drawable/ic_chevron_right_white_24px"
            app:tint="@color/gray" />

        <ImageView
            android:id="@+id/billing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:src="@drawable/ic_not_interested_white_24px"
            app:tint="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end">

            <ImageView
                android:id="@+id/refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="10dp"
                android:src="@drawable/ic_refresh_white_24px"
                app:tint="@color/colorPrimary" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">  <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_error"
            android:text="@string/mekanik_servis"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="#fff"></TextView>

<RadioGroup
    android:id="@+id/tum_radio_grup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/mekanik_radio_button_aylik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aylik" >

            </RadioButton>

            <RadioButton
                android:id="@+id/mekanik_radio_button_ucaylik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ucaylik" />

            <RadioButton
                android:id="@+id/mekanik_radio_button_altiaylik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/altiay" />

            <RadioButton
                android:id="@+id/mekanik_radio_button_yillik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yillik" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:text="@string/hasar_onarim_merkezi"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="#fff">

        </TextView>


            <RadioButton
                android:id="@+id/hasar_aylik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aylikh" />

            <RadioButton
                android:id="@+id/hasar_ucaylik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ucaylikh" />

            <RadioButton
                android:id="@+id/hasar_altiaylik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/altiayh" />

            <RadioButton
                android:id="@+id/hasar_yillik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yillikh" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="Hasar + Mekanik Servisi"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="#fff">

        </TextView>


            <RadioButton
                android:id="@+id/hasar_mekanik_aylik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aylikhm" />

            <RadioButton
                android:id="@+id/hasar_mekanik_ucaylik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ucaylikhm" />

            <RadioButton
                android:id="@+id/hasar_mekanik_altiaylik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/altiayhm" />

            <RadioButton
                android:id="@+id/hasar_mekanik_yillik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yillikhm" />


        <View
            android:id="@+id/view9"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black" />
</RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yellow"
            android:text="e-Fatura Kontor"
            android:textSize="18dp"
            android:textStyle="bold">

        </TextView>

        <RadioGroup
            android:id="@+id/radio_kontor"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/fatura_aylik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yüz" />

            <RadioButton
                android:id="@+id/fatura_ucaylik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ikiyuzelli" />

            <RadioButton
                android:id="@+id/fatura_altilik"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/besyuz" />

            <RadioButton
                android:id="@+id/fatura_yillik"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bin" />
        </RadioGroup>
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/black"></View>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp"
            android:layout_gravity="center"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sepet"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"></TextView>
            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text=":"
                android:layout_gravity="center"
                android:gravity="center"></TextView>

            <TextView
                android:id="@+id/txt_sepet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/red"
                ></TextView>
        </LinearLayout>
        <Button
            android:id="@+id/btn_satin_al"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:text="@string/satinal"></Button>

    </LinearLayout>
    </ScrollView>
</LinearLayout>