<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/miktar">

        </TextView>
        <EditText
            android:id="@+id/etMiktar"
            android:inputType="number"
            android:layout_width="100dp"
            android:gravity="right"
            android:layout_height="wrap_content">

        </EditText>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fiyat">

        </TextView>
        <EditText
            android:id="@+id/etFiyat"
            android:layout_width="100dp"
            android:inputType="number"
            android:gravity="right"
            android:layout_height="wrap_content">

        </EditText>

    </LinearLayout>

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/aciklama"
    android:textSize="25dp"
    ></TextView>
    <EditText
        android:id="@+id/txtaciklama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="24dp" />
</LinearLayout>